[package]
name = "webex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.2.0", features = ["derive"] }
thiserror = "1.0.40"
tokio-tungstenite = { verstion = "0.18.0", features = ["native-tls"] }
url = "2.3.1"
futures-util = "0.3.28"
http = "0.2.9"
chrono = { version = "0.4.24", features = ["serde"] }
serde_json = "1.0.96"
